Archive2/41/3099c39bb3f173/output
main.cpp:9:5: error: no matching function for call to 'f'
    f<Y::X>();
    ^~~~~~~
main.cpp:3:41: note: candidate template ignored: invalid explicitly-specified argument for 1st template parameter
template<template<typename> class> void f() { std::cout << "second.\n"; }
                                        ^
1 error generated.
