Archive2/41/3099c39bb3f173/main.cpp
#include <iostream>

template<template<typename> class> void f() { std::cout << "second.\n"; }

template<typename> class X {};
struct Y : X<int> { }; 

int main() {
    f<Y::X>();
}